[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.black]
line-length = 127
force-exclude = '.*_pb2\.py'

[tool.isort]
filter_files = true
ignore_whitespace = true
line_length = 127
multi_line_output = 1
order_by_type = true
profile = "black"
skip_glob = "*_pb2.py"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.design]
max-attributes = 8

[tool.pylint.format]
ignore-patterns = ".*_pb2.py"
max-line-length = 127

[tool.pylint.messages_control]
disable = "C0330, C0326"
good-names = "e,ip"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools_scm]
